app/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: httpd-frontend
  labels:
    app: httpd-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-frontend
  template:
    metadata:
      labels:
        app: httpd-frontend
    spec:
      containers:
      - image: registry.redhat.io/rhel8/httpd-24
        imagePullPolicy: Always
        name: httpd-rhel7
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
        volumeMounts:
        - name: httpd-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: httpd-persistent-storage
        persistentVolumeClaim:
          claimName: httpd-pv-claim
